2009-10-30  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: Wire CookieJarChromium to the cookies
        backend. This is a final step of a 3-steps raw cookies
        access implementation in Chromium.

        * platform/network/chromium/CookieJarChromium.cpp:
        (WebCore::getRawCookies):
        (WebCore::deleteCookie):

2009-10-30  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Fix Chromium crash in console.log in "deeply recursive" function 

        Check that result of 'frameSourceName' is not null handle
        before casting it to String. 
      
        Allow V8Proxy::sourceName/sourceLineNumber() to report
        that they have failed due to JavaScript stack overflow.

        https://bugs.webkit.org/show_bug.cgi?id=30904

        * bindings/scripts/CodeGeneratorV8.pm:
        * bindings/v8/ScriptCallStack.cpp:
        (WebCore::ScriptCallStack::create):
        (WebCore::ScriptCallStack::ScriptCallStack):
        * bindings/v8/ScriptCallStack.h:
        * bindings/v8/V8Proxy.cpp:
        (WebCore::V8Proxy::sourceLineNumber):
        (WebCore::V8Proxy::sourceName):
        * bindings/v8/V8Proxy.h:
        * bindings/v8/custom/V8WorkerContextCustom.cpp:
        (WebCore::CALLBACK_FUNC_DECL):

2009-10-30  Zoltan Horvath  <zoltan@webkit.org>

        Reviewed by Darin Adler.

        Allow custom memory allocation control for WebCore's MediaQueryExp
        https://bugs.webkit.org/show_bug.cgi?id=30855

        Inherits MediaQueryExp class from FastAllocBase because it is
        instantiated by 'new' in WebCore/css/CSSParser.cpp:4874.

        * css/MediaQueryExp.h:

2009-10-30  Roland Steiner  <rolandsteiner@chromium.org>

        Reviewed by Eric Seidel.

        Remove ENABLE_RUBY guards as discussed with Dave Hyatt and Maciej Stachowiak.

        Bug 28420 -  Implement HTML5 <ruby> rendering
        (https://bugs.webkit.org/show_bug.cgi?id=28420)

        No new tests (no functional change).
